Prevent zoom out on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,6 +38,10 @@ $indigo: #611f69;
 @import './api/messages.scss';
 @import './api/forms.scss';
 
+@-ms-viewport {
+  width: device-width;
+}
+
 html {
   height: 100%;
 }
